fix: Performance issues resolved
The app is now highly performant and the map is hidden by default

--- a/css/styles.css
+++ b/css/styles.css
@@ -193,6 +193,10 @@ a.skip-main:active {
   background-color: #ccc;
 }
 
+#map {
+  display: none;
+}
+
 /* ====================== Restaurant Filtering ====================== */
 
 .filter-options {
@@ -305,10 +309,10 @@ a.skip-main:active {
 
 .inside .map-container {
   background: blue none repeat scroll 0 0;
-  height: 87%;
+  height: 83%;
   position: fixed;
   right: 0;
-  top: 80px;
+  top: 97px;
   width: 50%;
 }
 
@@ -431,7 +435,7 @@ a.skip-main:active {
   max-width: 90%;
 }
 
-.reviews-form button {
+.reviews-form button, #show-map {
   width: 90%;
   background: #02539c;
   color: white;
@@ -440,7 +444,13 @@ a.skip-main:active {
   margin-top: 5px;
 }
 
-.reviews-form button:hover {
+#show-map {
+  margin: 10px 3px;
+  width: 99%;
+  max-width: 100%;
+}
+
+button:hover {
   cursor: pointer;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.4);
 }
